docs(guide): render flow diagrams as colored, animated Mermaid
Convert the four ASCII/text diagrams (CLIENT-mode path, id propagation, full COA/COD flow, transaction decision tree) to Mermaid with explicit light/dark-proof node colors and animated flow edges. Also finalizes the Java 21->25 prose alignment in the guide.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>